# 2016H_ovinger

./: .gitignore  README.md
3D/Oving1/: CMakeLists.txt  main.cpp
3D/Oving2/: CMakeLists.txt  main.cpp
3D/Oving3/: CMakeLists.txt  main.cpp
3D/Oving4/: CMakeLists.txt  imageloader.cpp  imageloader.h  main.cpp
3D/Testkube/: CMakeLists.txt  main.cpp
C++/Oving1/: CMakeLists.txt  main.cpp
C++/Oving1b/: CMakeLists.txt  main.cpp
C++/Oving2/: main.cpp
C++/Oving3/: CMakeLists.txt  main.cpp
C++/eksLeksjon1/: CMakeLists.txt  CppProgram.cpp  tallfil.cpp  toerpot.cpp
C++/eksLeksjon2/: CMakeLists.txt  byttVerdi.cpp  pekeraddisjon.cpp  sammenlikning.cpp
Sikkerhet/oving2/.svn/: wc.db
Sikkerhet/oving2/mappe/: Makefile  Makefile.r33  Makefile.r35  colortext  testfile2  testfileBjarne
